--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-node_modules
+# package directories
+node_modules/
+# Serverless directories
+.serverless/
+.dynamodb
+# files
+.DS_Store
+.env
+# tests
+coverage/
